Adding learn feedback
by ranking the path of lose or win prediction becomes better

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ Neuron/obj/Release/Neuron.pdb
 Neuron/obj/Release/Neuron.Properties.Resources.resources
 .vs/Neuron/v16/.suo
 Neuron/obj/Release/DesignTimeResolveAssemblyReferencesInput.cache
+Neuron/obj/Release/DesignTimeResolveAssemblyReferences.cache
